# pycon-portugal-2024

./: LICENSE  README.md  agents.ipynb  no_agents.ipynb  pyproject.toml
