[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycon-demo"
version = "0.0.0"
description = "Demo for the talk about AI-agents at PyCon Portugal 2024"
authors = [
    "Alex Shershebnev <alexs@forgood.ai>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

googlesearch-python = "^1.2.5"
openai = "^1.51.2"
notebook = "^7.2.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "5.3.0"
